# expense-sharing-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6b115a659aa4_add_soft_delete_for_expense_model.py  db4df09cbc43_init_models.py
app/: main.py
app/api/v1/: auth.py  expenses.py  groups.py  settlements.py
app/core/: config.py  deps.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  expense.py  group.py  settlement.py  user.py
app/schemas/: auth.py  balance.py  expense.py  group.py  settlement.py  user.py
app/services/: auth_service.py  balance_service.py  expense_service.py  group_service.py  settlement_service.py
app/tasks/: celery_app.py  email_tasks.py
tests/: conftest.py  test_auth.py  test_balance.py  test_expenses.py  test_groups.py
