[project]
name = "expense-sharing-api"
version = "0.1.0"
description = "Split expenses with friends — REST API with debt simplification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi-mail>=1.6.2",
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
]

[dependency-groups]
dev = [
    "faker>=40.15.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
